<resources>
    <string name="app_name">InventoryApp</string>

    <!-- Catalog Activity -->
    <string name="action_insert_new_product">Insert A Product</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="sell">Sell</string>
    <string name="list_quantity">Quantity:</string>

    <!-- Editor Activity -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="hint_product_price">e.g. $500.00</string>
    <string name="hint_supplier_phone">e.g. 555-555-5555</string>
    <string name="order">order</string>
    <string name="editor_textview_name">Name:</string>
    <string name="editor_textview_price">Price:</string>
    <string name="editor_textview_quantity">Quantity:</string>
    <string name="editor_textview_supplier_name">Supplier Name:</string>
    <string name="editor_textview_supplier_phone">Supplier Phone:</string>
    <string name="editor_increment_button">+</string>
    <string name="editor_decrement_button">-</string>
</resources>
