<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        style="@style/EditorTextView"
        android:text="@string/editor_textview_name"/>

    <EditText
        android:id="@+id/edit_product_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        style="@style/EditorTextView"
        android:text="@string/editor_textview_price"/>

    <EditText
        android:id="@+id/edit_price"
        android:hint="@string/hint_product_price"
        android:inputType="numberDecimal"
        style="@style/EditorFieldStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        style="@style/EditorTextView"
        android:text="@string/editor_textview_quantity"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/editor_decrement_button" />

            <EditText
                android:id="@+id/edit_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle.Quantity"
                android:layout_toRightOf="@+id/decrement_button"/>

            <Button
                android:id="@+id/increment_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/editor_increment_button"
                android:layout_toRightOf="@+id/edit_quantity"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        style="@style/EditorTextView"
        android:text="@string/editor_textview_supplier_name"/>

    <EditText
        android:id="@+id/edit_supplier_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        style="@style/EditorTextView"
        android:text="@string/editor_textview_supplier_phone"/>

    <EditText
        android:id="@+id/edit_supplier_phone"
        android:hint="@string/hint_supplier_phone"
        android:inputType="phone"
        style="@style/EditorFieldStyle.Phone" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"/>

</LinearLayout>

</LinearLayout>